@@ -727,7 +727,7 @@ directive:</p>
 <p>With the &quot;widths&quot; argument &quot;auto&quot; (or &quot;class&quot; value &quot;colwidths-auto&quot;),
 column widths are determined by the backend (if supported by the
 writer/backend).</p>
-<table border="1" class="colwidths-auto docutils">
+<span id="target1"></span><table border="1" class="colwidths-auto docutils" id="target2">
 <thead valign="bottom">
 <tr><th class="head">A</th>
 <th class="head">B</th>
